Rev.1 YouTube 埋込
Rev.1 YouTube 埋込

--- a/03_n-kou.html
+++ b/03_n-kou.html
@@ -429,9 +429,8 @@
 			</div><!--main-topic-20閉じタグ-->
 			
 			<div class="main-topic-21">
-				<figure class="movie"><img src="02_images/schoolsong.png" alt="校歌" width="343" height="215"></figure>	
+				<iframe width="343" height="193" src="https://www.youtube.com/embed/xhOsnY-k8JM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			
 			</div>	<!--main-contentsの閉じタグ／ここまでmain-contents終わり3月＊日-->
 
 		<footer id="footer__main">	<!--(黒)N高についてさらに詳細を知りたい方はこちら〜コピーライトまで-->
