--- a/03_n-kou.html
+++ b/03_n-kou.html
@@ -10,6 +10,7 @@
 	<body>
 		<div id="main">
 			<header id="page-head">
+				<div class="page-head-1">
 				<div class="page-head__intro">
 					<p>KADOKAWAが創る新しいネットの高校</p>
 					<ul>
@@ -22,7 +23,9 @@
 						<li><a href="#"><img src="02_images/school-icon.png" alt="生徒用" width="16" height="20">生徒用ログイン</a></li>
 					</ul>
 				</div>
-
+				</div>
+				
+		<div class="page-head__main-logo-common">
 			<div class="page-head__main-logo">
 			<a href="">
 				<figure>
@@ -49,7 +52,8 @@
 				</div>
 			</div>
 
-				<div class="page-head__intro-1">	
+			<div class="page-head__mainguide">
+				<div class="page-head__mainguide__detail">	
 					<ul>
 						<li><a href="#">説明会・相談会</a></li>
 						<li><a href="#">資料請求</a></li>
@@ -64,9 +68,17 @@
 				<li><a href="#">提携スクール</a></li>
 			</ul>
 			</nav>
+			<div>
+		</div>
 		</header>
 		
+
+		
 			<nav id="local-nav">
+				<div class="t">
+					<div class="triangle">
+					</div>
+				</div>	
 				<ul>
 					<li><a href="#">高卒資格取得について</a></li>
 					<li><a href="#">Advanced Program</a></li>
@@ -82,14 +94,15 @@
 					<li><a href="#">キャンパス</a></li>
 					<li><a href="#">動画一覧</a></li>
 					<li><a href="#">学費</a></li>
-				</ul>		
+				</ul>
 			</nav>
 <!--ここからメインコンテンツ始まり３月４日〜-->			
 	<div id="main-contents">
 		<div class="main-contents-image">
-			<figure>
-				<img src="02_images/about-school.png" alt="N高について" width="1265" height="530">
-			</figure>
+			<h1 class="catchcopy">N高について</h1>
+			<p class="about">
+				<img src="02_images/mainabout.png" alt="about" width="100" height="13">
+			</p>
 		</div>
 			<nav id="breadcrumbs">
 				<ul>
