--- a/03_n-kou.html
+++ b/03_n-kou.html
@@ -20,7 +20,7 @@
 						<li><a href="#">ブログ</a></li>
 						<li><a href="#">Web出願</a></li>
 						<li><a href="#">卒業された方へ</a></li>
-						<li><a href="#"><img src="02_images/school-icon.png" alt="生徒用" width="16" height="20">生徒用ログイン</a></li>
+						<li class="loginlink"><a href="#">生徒用ログイン</a></li>
 					</ul>
 				</div>
 				</div>
@@ -448,6 +448,7 @@
 
 		<footer id="footer__main">	<!--(黒)N高についてさらに詳細を知りたい方はこちら〜コピーライトまで-->
 			<div class="footer__main__contact-detail">
+				<div class="footer__main__contact-detail-inner">
 				<p>N高についてさらに詳細を知りたい方はこちら</p>
 				<div class="footer__main__contact-detail-1">
 					<ul>
@@ -466,6 +467,7 @@
 					</p>
 					
 					<p><a class="footer__main__contact-info-web" href="#">WEBからお問い合わせ</a></p>
+				</div>
 				</div>
 				</div>
 			</div>
